[package]
name = "heimdall-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blt-utils = "0.1.0" 
directories = "5.0.1"
heimdall = { version = "*", path = "../heimdall" }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
sysinfo = "0.29.0"
tracing = "*"
tracing-subscriber = "*"
