[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"
description = "Custom network status app"
repository = "https://github.com/eta077/heimdall"
readme = "README.md"

exclude = [ ".github" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blt-utils = { version = "*", git = "https://github.com/eta077/blt-utils.git" }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

